src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Application Process</fullName>
        <description>Application stages through which an opportunity progresses.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Application withdrawn by AMPLIFI Capital</fullName>
        </values>
        <values>
            <fullName>Application withdrawn by customer</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>No Response from Client</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Assessment Process</fullName>
        <description>Assessment stages through which an opportunity progresses.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Require More Information</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Closing Process</fullName>
        <description>Closing stages through which an opportunity progresses.</description>
        <isActive>true</isActive>
        <values>
            <fullName>%28Won%29 Signed</fullName>
        </values>
        <values>
            <fullName>Loan Withdrawn</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Outcome Process</fullName>
        <description>Outcome stages through which an opportunity progresses.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted</fullName>
        </values>
        <values>
            <fullName>Application withdrawn by AMPLIFI Capital</fullName>
        </values>
        <values>
            <fullName>Application withdrawn by customer</fullName>
        </values>
        <values>
            <fullName>Contract Stage</fullName>
        </values>
        <values>
            <fullName>No Response from Client</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>APR__c</fullName>
        <label>APR</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Additional_Information_Details__c</fullName>
        <label>Additional Information Details</label>
        <picklist>
            <controllingField>Additional_Information_Required__c</controllingField>
            <picklistValues>
                <fullName>Financial Info-Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Info- Management Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evidence of Time Trading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarantor Details-Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarantor Details-Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evidence of Additional capitalisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clarification over residential address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Asset &amp; Liability Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Additional_Information_Narrative__c</fullName>
        <label>Additional Information Narrative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Information_Required__c</fullName>
        <label>Additional Information Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Information_Satisfactory__c</fullName>
        <label>Additional Information Satisfactory</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agreed_that_no_Relationship_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreed that no Relationship Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Calculation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Annual Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track whether the application email has been sent or not</description>
        <label>Application Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Form_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will be automatically checked when all necessary information on the application form has been completed.</description>
        <inlineHelpText>This checkbox will be automatically checked when all necessary information on the application form has been completed</inlineHelpText>
        <label>Application Form Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Form__c</fullName>
        <formula>IF( Program__c != null &amp;&amp;  Program_Product_ASO__c != null,  
IF(
 (Conditional_Offer_Amount__c &gt; 0  &amp;&amp;  Amount &gt; 0), 
  IF(
    Application_Form_Completed__c = FALSE,
    IMAGE(&quot;/img/msg_icons/info16.png&quot;, &quot;Incomplete&quot; ),
    IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Complete&quot;)
  )
   + &quot;   &quot;
   + HYPERLINK(&quot;/apex/CRMS_ApplicationForm?scontrolCaching=1&amp;id=&quot;+Id , &quot;Edit Application Form&quot;,&quot;_self&quot;),
  &apos;&apos;
),
&apos;&apos;)</formula>
        <label>Application Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_ID2__c</fullName>
        <externalId>true</externalId>
        <label>Application ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Application_Number__c</fullName>
        <label>Application Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ave_Monthly_Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ave Monthly Sales</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Card_Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Average Monthly Card Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSE_Credit_Score__c</fullName>
        <label>CSE Credit Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Conditional_Approval_Multiplier__c</fullName>
        <formula>IF(Rent_Electronic_Sales__c &gt; 0.80 , 1.25,
IF((Rent_Electronic_Sales__c  &lt;=  0.80 &amp;&amp; Rent_Electronic_Sales__c &gt; 0.50) , 1.50,
IF((Rent_Electronic_Sales__c &lt;= 0.50 &amp;&amp; Rent_Electronic_Sales__c &gt; 0.30) , 1.80,
IF((Rent_Electronic_Sales__c &lt;= 0.30 &amp;&amp; Rent_Electronic_Sales__c &gt; 0.0) , 2.1,
0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conditional Approval Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conditional_Offer_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Conditional Offer Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_Date__c</fullName>
        <label>Contract Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CountryISO__c</fullName>
        <formula>CASE( TEXT(Country__c) , &apos;Hong Kong&apos;, &apos;HK&apos;, &apos;Singapore&apos;, &apos;SG&apos;,&apos;Philippines&apos;, &apos;PH&apos;,&apos;UK&apos;)</formula>
        <label>CountryISO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Status__c</fullName>
        <label>Credit Check Status</label>
        <picklist>
            <picklistValues>
                <fullName>Checks In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Details Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_File_Disclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit File Disclosure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DWH_Import__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DWH Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DWH_Last_Sync__c</fullName>
        <label>DWH Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DWH_Status__c</fullName>
        <label>DWH Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Protection_Act_Declaration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Protection Act Declaration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disbursed_Date__c</fullName>
        <label>Disbursed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Documents_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checkbox updated automatically by Kofax</inlineHelpText>
        <label>Documents Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documents_Received_Kofax__c</fullName>
        <label>Documents Received</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <formula>TEXT(Account.Entity_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_Credit_Score__c</fullName>
        <label>Experian Credit Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FOC__c</fullName>
        <label>Frequency of Collection</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Decision_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Decision Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Decision_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Decision Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GAA_Declaration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GAA Declaration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_Application_Form__c</fullName>
        <formula>IF(Application_Form_Completed__c = TRUE,( 
  IF(CONTAINS(RecType_Name__c,&quot;UK&quot;) , HYPERLINK(&quot;https://composer.congamerge.com?sessionId=&quot;+ $Api.Session_ID +&quot;&amp;serverUrl=&quot;+ $Api.Partner_Server_URL_290 + &quot;&amp;id=&quot; + Id +&quot;&amp;TemplateId=a0E260000004EZf&amp;ReportId=[person]00O26000000F8Zt?pv0=&quot;+ AccountId +&quot;&amp;DocuSignVisible=1&amp;DS7=7&quot;, &quot;Click to generate UK application form&quot;,&quot;blank&quot;),
  IF( CONTAINS(RecType_Name__c,&quot;Singapore&quot;) , HYPERLINK(&quot;https://composer.congamerge.com?sessionId=&quot;+ $Api.Session_ID +&quot;&amp;serverUrl=&quot;+ $Api.Partner_Server_URL_290 + &quot;&amp;id=&quot; + Id +&quot;&amp;TemplateId=a0E260000004EZp&amp;ReportId=[person]00O26000000F8Zt?pv0=&quot;+ AccountId +&quot;&amp;DocuSignVisible=1&amp;DS7=7&quot;, &quot;Click to generate Singapore application form&quot;,&quot;blank&quot;),
IF( CONTAINS(RecType_Name__c,&quot;Hong&quot;) , HYPERLINK(&quot;https://composer.congamerge.com?sessionId=&quot;+ $Api.Session_ID +&quot;&amp;serverUrl=&quot;+ $Api.Partner_Server_URL_290 + &quot;&amp;id=&quot; + Id +&quot;&amp;TemplateId=a0E260000004EZk&amp;ReportId=[person]00O26000000F8Zt?pv0=&quot;+ AccountId +&quot;&amp;DocuSignVisible=1&amp;DS7=7&quot;, &quot;Click to generate Hong Kong application form&quot;,&quot;blank&quot;),
IF( CONTAINS(RecType_Name__c,&quot;Philippines&quot;) , HYPERLINK(&quot;https://composer.congamerge.com?sessionId=&quot;+ $Api.Session_ID +&quot;&amp;serverUrl=&quot;+ $Api.Partner_Server_URL_290 + &quot;&amp;id=&quot; + Id +&quot;&amp;TemplateId=a0E260000004EZu&amp;ReportId=[person]00O26000000F8Zt?pv0=&quot;+ AccountId +&quot;&amp;DocuSignVisible=1&amp;DS7=7&quot;, &quot;Click to generate Philippines application form&quot;,&quot;blank&quot;),NULL ) )  ))
), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Application Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_any_Relationship_with_AMP_Directors__c</fullName>
        <label>Has any Relationship with AMP Directors</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Amount__c</fullName>
        <formula>CEILING((
Amount * IF(Annual_Calculation__c, Monthly_Interest__c, Monthly_Interest__c*12)
* Loan_Term_In_Days__c/365)*100)/100</formula>
        <label>Interest Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Daily_Repayment__c</fullName>
        <formula>IF(No_of_Repayments_Daily__c&lt;&gt;0,round((((IF(Annual_Calculation__c,Monthly_Interest__c,(Monthly_Interest__c*12)))/365*Loan_Term_In_Days__c)*Amount/No_of_Repayments_Daily__c),2),null)</formula>
        <label>Interest Daily Repayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Weekly_Repayment__c</fullName>
        <formula>IF(No_of_Repayments_Weekly__c&lt;&gt;0,round((((IF(Annual_Calculation__c,Monthly_Interest__c,(Monthly_Interest__c*12)))/365*Loan_Term_In_Days__c)*Amount/No_of_Repayments_Weekly__c),2),null)</formula>
        <label>Interest Weekly Repayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Introducer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Introducer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsClient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsClient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Cloned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landlord_Contact_Details__c</fullName>
        <label>Landlord Contact Details</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadID__c</fullName>
        <label>LeadID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Client_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Lead Client External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lead_Owner_Id__c</fullName>
        <label>Lead Owner Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Frequency__c</fullName>
        <formula>TEXT(Program_Product_ASO__r.Product__r.Schedule_Type__c )</formula>
        <label>Loan Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Interest__c</fullName>
        <formula>Program_Product_ASO__r.Product__r.Interest_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Purpose__c</fullName>
        <label>Loan Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refurbishment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expansion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinancing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Term_In_Days__c</fullName>
        <formula>VALUE( MID(TEXT( Requested_Loan_Term__c ), 5, 3) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Term In Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Term_In_Months__c</fullName>
        <formula>VALUE( MID(TEXT( Requested_Loan_Term__c ), 0, 2) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Term In Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Term__c</fullName>
        <formula>TEXT(Program_Product_ASO__r.Product__r.Full_Term__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Interest__c</fullName>
        <defaultValue>IF(OR($RecordType.DeveloperName == &apos;Renewal_UK&apos;,
$RecordType.DeveloperName == &apos;Outcome_UK&apos;,
$RecordType.DeveloperName == &apos;Closing_UK&apos;, 
$RecordType.DeveloperName == &apos;Application_UK&apos;,
$RecordType.DeveloperName == &apos;Assessment_UK&apos;,
$RecordType.DeveloperName == &apos;Disbursement_UK&apos;) , $Setup.IR__c.Annual_UK__c , $Setup.IR__c.Annual__c )</defaultValue>
        <label>Annual Interest</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Rental__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Monthly Rental</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name_of_AMP_Personnel__c</fullName>
        <label>Name of AMP Personnel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Repayments_Daily__c</fullName>
        <formula>if(
isnumber(left(text(Requested_Loan_Term__c),2)),
CASE(
VALUE( MID(TEXT( Requested_Loan_Term__c ), 0, 2) ), 
03, 62,
04, 84,
05, 106, 
06, 126,
07, 149,
08, 170, 
09, 192, 
12, 259, 
0),
null
)</formula>
        <inlineHelpText>Number of repayments to be made each working day (5 days / week)</inlineHelpText>
        <label>No. of Repayments (Daily)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Repayments_Weekly__c</fullName>
        <formula>if(
isnumber(left(text(Requested_Loan_Term__c),2)),
CASE(VALUE( MID(TEXT( Requested_Loan_Term__c ), 0, 2) ), 
03, 13,
04, 18,
05, 22, 
06, 26,
07, 30,
08, 35, 
09, 39, 
12, 52, 
0),
null
)</formula>
        <label>No. of Repayments (Weekly)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Outlets__c</fullName>
        <label>Number of Outlets</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offer_Presented_to_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offer Presented to Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer_Status__c</fullName>
        <label>Offer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Task_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Task Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>TEXT( Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Profile_Name__c</fullName>
        <formula>Owner.Profile_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Website_Tracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Tracker</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Partner Website Tracker)</relationshipLabel>
        <relationshipName>Partner_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Business_Position__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ Primary_Contact__r.Id+&apos;/e?retURL=/&apos;+Id+&apos;&amp;saveURL=/&apos;+Id,  TEXT(Primary_Contact__r.PersonContact.Business_Position__c) , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Business Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <formula>Primary_Contact__r.PersonContact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The email address of the primary contact.</inlineHelpText>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ Primary_Contact__r.Id+&apos;/e?retURL=/&apos;+Id+&apos;&amp;saveURL=/&apos;+Id, Primary_Contact__r.PersonContact.Phone , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The telephone number of the primary contact.  To update this number, click and edit the primary contact.</inlineHelpText>
        <label>Primary Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Associated_Business__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Primary Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Principal_Daily_Repayment__c</fullName>
        <formula>IF(
 No_of_Repayments_Daily__c &lt;&gt; 0 , 
 round((Amount /  No_of_Repayments_Daily__c),2),
 null
)</formula>
        <label>Principal Daily Repayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal_Weekly_Repayment__c</fullName>
        <formula>IF (
 No_of_Repayments_Weekly__c &lt;&gt; 0 ,
 round((Amount /  No_of_Repayments_Weekly__c),2),
 null
)</formula>
        <label>Principal Weekly Repayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <formula>Introducer__r.Profile_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Product_ASO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Program__c</field>
                <operation>equals</operation>
                <valueField>Program_Product_ASO__c.Program__c</valueField>
            </filterItems>
            <filterItems>
                <field>Program_Product_ASO__c.Rules_Engine__c</field>
                <operation>notEqual</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program_Product_ASO__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Country__c</field>
                <operation>contains</operation>
                <valueField>Program__c.Country_Mapping__c</valueField>
            </filterItems>
            <filterItems>
                <field>Program__c.isActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quotation_Total_Repaid_Daily__c</fullName>
        <formula>Amount +  Interest_Amount__c</formula>
        <label>Quotation Total Repaid (Daily)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quotation_Total_Repaid_Weekly__c</fullName>
        <formula>Amount +  Interest_Amount__c</formula>
        <label>Quotation Total Repaid (Weekly)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RecType_Name__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecType Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Operation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Operation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Operation__c.Opportunity__r.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Operation__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>